[project]
name = "ribasim-nl-root"
version = "0.1.0"
description = "Ribasim water resources modeling in the Netherlands"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh_helpers",
    "bokeh>=3.8.0",
    "contextily>=1.6.2",
    "dvc-webdav>=3.0.0",
    "dvc>=3.66.1",
    "fiona>=1.10.1",
    "geocube>=0.7.1",
    "geopandas>=1.1.1",
    "griffe>=1,<2",
    "hydamo",
    "imod>=1",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "minio>=7.2.20",
    "momepy>=0.11.0",
    "nbstripout>=0.8",
    "netcdf4>=1.7.2",
    "networkx>=3.5",
    "openpyxl>=3.1.5",
    "pandas-stubs>=3",
    "pandas>=3",
    "peilbeheerst_model",
    "pip>=25.2",
    "plotly>=6.3.1",
    "prek>=0.3.9",
    "pyarrow>=21.0.0",
    "pydantic-settings>=2.11.0",
    "pydantic>=2,<2.12",
    "pyodbc>=5.2.0",
    "pyogrio>=0.11.1",
    "pyrefly>=0.60.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest>=8.4.2",
    "quartodoc>=0.11.1",
    "rasterstats>=0.20.0",
    "requests>=2.32.5",
    "ribasim_nl",
    "ribasim==2026.1.0",
    "ruff>=0.14.0",
    "rust-just>=1.49.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "tomli-w>=1.2.0",
    "tomli>=2.2.1",
    "tqdm>=4.67.1",
    "types-geopandas>=1.1.3.20260402",
    "types-networkx>=3.6.1.20260402",
    "types-pycurl>=7.45.7.20260316",
    "types-python-dateutil>=2.9.0.20260402",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "xarray>=2026.2.0",
    "xlwings>=0.33.15",
    "xugrid>=0.14.2",
    "zarr>=2.17.0",
]

[tool.uv.sources]
# ribasim = { git = "https://github.com/Deltares/Ribasim", branch = "main", subdirectory = "python/ribasim" }
ribasim = { git = "https://github.com/Deltares/Ribasim", rev = "32534d99b27a1d6b73a34c9b1451f974542a81bc", subdirectory = "python/ribasim" }
# ribasim = { path = "../Ribasim/python/ribasim", editable = true }
bokeh_helpers = { workspace = true }
hydamo = { workspace = true }
peilbeheerst_model = { workspace = true }
ribasim_nl = { workspace = true }

[tool.uv.workspace]
members = ["src/*"]

[tool.pytest]
strict = true

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "D",
    "E",
    "F",
    "I",
    "NPY",
    "PD",
    "RUF",
    "S",
    "UP",
]
ignore = [
    "D1",
    "D400",
    "D401",
    "E501",  # TODO https://docs.astral.sh/ruff/rules/line-too-long/
    "F403",  # TODO https://docs.astral.sh/ruff/rules/undefined-local-with-import-star/
    "F405",  # TODO https://docs.astral.sh/ruff/rules/undefined-local-with-import-star-usage/
    "PD002",
    "PD003",
    "PD008",
    "PD009",
    "PD010",
    "PD011",
    "PD013",
    "PD015",
    "S101",  # assert used pervasively for data validation in this modeling project
    "S603",  # subprocess calls to known commands (uv, ribasim, dvc)
    "S607",  # partial executable paths for known commands
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyrefly]
baseline = "baseline.json"
project-includes = [
    "notebooks/05_add_bergend.py",
    "notebooks/06_add_synthetic_forcing.py",
    "notebooks/07_add_dynamic_forcing.py",
    "scripts/repro.py",
    "src/bokeh_helpers/bokeh_helpers",
    "src/hydamo/hydamo",
    "src/peilbeheerst_model/peilbeheerst_model",
    "src/ribasim_nl/ribasim_nl",
]
search-path = [
    "notebooks/05_add_bergend.py",
    "notebooks/06_add_synthetic_forcing.py",
    "notebooks/07_add_dynamic_forcing.py",
    "scripts/repro.py",
    "src/bokeh_helpers",
    "src/hydamo",
    "src/peilbeheerst_model",
    "src/ribasim_nl",
]
replace-imports-with-any = ["tqdm", "tqdm.*", "openpyxl", "openpyxl.*"]

[tool.pyrefly.errors]
missing-source = "error"
untyped-import = "error"
unused-ignore = "error"
