[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bokeh-helpers"
description = "helpers for building bokeh dashboards"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "bokeh>3",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "bokeh_helpers.__version__" }

[tool.setuptools.packages.find]
include = ["bokeh_helpers"]
