[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bokeh_helpers"
description = "helpers for building bokeh dashboards"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "bokeh>3",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "bokeh_helpers/__init__.py"
