[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hydamo"
description = "Class to read/write and manipulate HyDAMO data"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.9"
dependencies = [
    "geopandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "hydamo.__version__" }

[tool.setuptools.packages.find]
include = ["hydamo"]

[tool.setuptools.package-data]
"hydamo" = ["**/*.csv", "**/*.qml", "**/*.sld", "**/*.json"]

[project.urls]
Documentation = "https://deltares.github.io/Ribasim-NL/HyDAMO"
Source = "https://github.com/Deltares/Ribasim-nl"
