[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydamo"
description = "Class to read/write and manipulate HyDAMO data"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "geopandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "hydamo/__init__.py"

[project.urls]
Documentation = "https://deltares.github.io/Ribasim-NL/HyDAMO"
Source = "https://github.com/Deltares/Ribasim-nl"
