[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hydamo"
description = "Class to read/write and manipulate HyDAMO data"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.13"
dependencies = [
    "geopandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "hydamo/__init__.py"

[project.urls]
Documentation = "https://ribasim.nl/"
Source = "https://github.com/Deltares/Ribasim-NL"
