[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "peilbeheerst_model"
description = "functions to derive a Ribasim network from a hydro-dataset"
readme = "README.md"
authors = [
    { name = "Guy Dupuits", email = "dupuits@hkv.nl" },
	{ name = "Jerom Aerts", email = "J.Aerts@hkv.nl" },
	{ name = "Ron Bruijns", email = "R.Bruijns@hkv.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "geopandas",
	"numpy",
	"pandas",
	"pydantic",
	"shapely",
	"tqdm",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "peilbeheerst_model.__version__" }

[tool.setuptools.packages.find]
include = ["peilbeheerst_model"]


[project.urls]
Documentation = "https://deltares.github.io/Ribasim-NL/Peilbeheerst-model"
Source = "https://github.com/Deltares/Ribasim-nl"
