[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peilbeheerst_model"
description = "functions to derive a Ribasim network from a hydro-dataset"
readme = "README.md"
authors = [
    { name = "Guy Dupuits", email = "dupuits@hkv.nl" },
    { name = "Jerom Aerts", email = "J.Aerts@hkv.nl" },
    { name = "Ron Bruijns", email = "R.Bruijns@hkv.nl" },
]
license = { text = "MIT" }

requires-python = ">=3.13"
dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pydantic",
    "shapely",
    "tqdm",
    "matplotlib",
    "fiona",
    "networkx",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "peilbeheerst_model/__init__.py"

[project.urls]
Documentation = "https://ribasim.nl/"
Source = "https://github.com/Deltares/Ribasim-NL"
