[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ribasim_nl"
description = "functions to work with python classes you typically find in hydro-datasets"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
	{ name = "Martijn Visser", email = "martijn.visser@deltares.nl" }
]
license = { text = "MIT" }

requires-python = ">=3.9"
dependencies = [
    "geopandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.dynamic]
version = { attr = "ribasim_nl.__version__" }

[tool.setuptools.packages.find]
include = ["ribasim_nl"]


[project.urls]
Documentation = "https://deltares.github.io/Ribasim-NL"
Source = "https://github.com/Deltares/Ribasim-nl"
