[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ribasim_nl"
description = "functions to work with python classes you typically find in hydro-datasets"
readme = "README.md"
authors = [
    { name = "Daniel Tollenaar", email = "daniel@d2hydro.nl" },
    { name = "Martijn Visser", email = "martijn.visser@deltares.nl" }
]
license = { text = "MIT" }

requires-python = ">=3.10"
dependencies = [
    "geopandas",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[tool.hatch.version]
path = "ribasim_nl/__init__.py"

[project.urls]
Documentation = "https://ribasim.nl/"
Source = "https://github.com/Deltares/Ribasim-NL"
